--- a/scss/2-base/_typography.scss
+++ b/scss/2-base/_typography.scss
@@ -8,7 +8,7 @@ h3,
 h4 {
     font-weight: inherit;
     font-size: inherit;
-    line-height: $global-title-line-height;
+    line-height: $global-small-line-height;
     margin: 0;
 }
 
