--- a/scss/3-components/_button.scss
+++ b/scss/3-components/_button.scss
@@ -55,7 +55,7 @@
   /* Internet Explorer/Edge */
   user-select: none;
   /* 7 */
-  line-height: $global-title-line-height;
+  line-height: $global-small-line-height;
   /* 8 */
   text-align: center;
   /* 9 */
